--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,12 +90,12 @@ layout: default
                 <div class="patch-body">
                      <h4>TL;DR</h4>
                      <ul>
-                         <li><strong>Bugs corrigidos</strong>: Medic Manual X, Illusion of Exchange, Combo Ready, @showexp/@showzeny do Alfred, cartas Star Scourge e Astrologika.</li>
-                         <li><strong>Growth Shadow Coffers</strong> agora dropam de <strong>10 monstros</strong> da faixa <strong>30-50</strong> para melhorar early game.</li>
-                         <li><strong>Random Options</strong> dos Growth Shadow Coffers: valor máximo + atributo reduzido para <strong>3</strong> (era 5).</li>
-                         <li><strong>Peso limite</strong> agora escala com <strong>nível</strong> (não mais STR). No nível 50 = peso de STR 99.</li>
-                         <li><strong>Area Loot</strong> agora tem <strong>custo 0 de SP</strong>.</li>
-                         <li><strong>Rachel Nightmare</strong> foi <strong>dificultada</strong> com nova mecânica para incentivar conteúdo em grupo.</li>
+                         <li><strong>Bugs</strong>: Medic Manual X, Illusion of Exchange, Combo Ready, @showexp/@showzeny do Alfred, cartas Star Scourge e Astrologika.</li>
+                         <li><strong>Growth Shadow Coffers</strong>: 10 monstros da faixa 30-50 agora dropam.</li>
+                         <li><strong>Random Options</strong>: Growth Shadow Coffers com valor máximo + atributo reduzido para 3 (era 5).</li>
+                         <li><strong>Peso limite</strong>: escala com nível (não mais STR). Nível 50 = peso de STR 99.</li>
+                         <li><strong>Area Loot</strong>: custo 0 de SP.</li>
+                         <li><strong>Rachel Nightmare</strong>: dificultada com nova mecânica para incentivar conteúdo em grupo.</li>
                      </ul>
                     
                     <div class="patch-actions">
