ajustes finais patch v2-1-0

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -96,6 +96,7 @@ layout: default
                          <li><strong>Peso limite</strong>: escala com nível (não mais STR). Nível 50 = peso de STR 99.</li>
                          <li><strong>Area Loot</strong>: custo 0 de SP.</li>
                          <li><strong>Rachel Nightmare</strong>: dificultada com nova mecânica para incentivar conteúdo em grupo.</li>
+                         <li><strong>Mapa da distorção Einbroch Deadlands</strong>: adicionada flag de PVP (como era pra ser).</li>
                      </ul>
                     
                     <div class="patch-actions">
