--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -91,7 +91,7 @@ layout: default
                      <h4>TL;DR</h4>
                      <ul>
                          <li><strong>Bugs</strong>: Medic Manual X, Illusion of Exchange, Combo Ready, @showexp/@showzeny do Alfred, cartas Star Scourge e Astrologika.</li>
-                         <li><strong>Growth Shadow Coffers</strong>: 10 monstros da faixa 30-50 agora dropam.</li>
+                         <li><strong>Growth Shadow Coffers</strong>: 10 monstros da faixa 30-50 agora dropam + shadows Unseen World e School of Cats adicionados.</li>
                          <li><strong>Random Options</strong>: Growth Shadow Coffers com valor máximo + atributo reduzido para 3 (era 5).</li>
                          <li><strong>Peso limite</strong>: escala com nível (não mais STR). Nível 150 = peso de STR 99.</li>
                          <li><strong>Area Loot</strong>: custo 0 de SP.</li>
